Crash when opening a file containing a Line Style #73125

Closed
opened 2020-01-14 22:12:30 +01:00 by Marcin Twarowski · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.83 (sub 0), branch: master, commit date: 2020-01-14 06:12, hash: 1bcb2bfd57
Worked: 2.80, 2.81a

Short description of error
Opening a file in Blender version 2.82 and 2.83 causes crash to desktop. The cause of crash seems to be a Freestyle Line Style:
image.png

Exact steps for others to reproduce the error

  • Try to open the file in Blender 2.82 or 2.83:
    line_style_crash.blend
  • or try to append the LineStyle from that file.
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.83 (sub 0), branch: master, commit date: 2020-01-14 06:12, hash: `1bcb2bfd57` Worked: 2.80, 2.81a **Short description of error** Opening a file in Blender version 2.82 and 2.83 causes crash to desktop. The cause of crash seems to be a Freestyle Line Style: ![image.png](https://archive.blender.org/developer/F8278400/image.png) **Exact steps for others to reproduce the error** - Try to open the file in Blender 2.82 or 2.83: [line_style_crash.blend](https://archive.blender.org/developer/F8278408/line_style_crash.blend) - or try to append the LineStyle from that file.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Added subscribers: @Jeroen-Bakker, @mano-wii

Added subscribers: @Jeroen-Bakker, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the crash. It occurs in the function do_version_curvemapping_walker that was introduced in 2e6159a4
@Jeroen-Bakker, is this one for you?

I can confirm the crash. It occurs in the function `do_version_curvemapping_walker` that was introduced in 2e6159a4 @Jeroen-Bakker, is this one for you?

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2020-01-16 11:33:56 +01:00

This is just a stupid typo in 2e6159a4, fix incoming.

This is just a stupid typo in 2e6159a4, fix incoming.

This issue was referenced by 3ee6d74f93

This issue was referenced by 3ee6d74f933aa5779ffe8a4da348f07a23cc034e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73125
No description provided.