Fix T73125: Crash when opening a file containing a Line Style.

Dummy typo in rB2e6159a4.